varlen_example/shouldfail/nonconst_len_expr.stderr
warning: unused import: `varlen::define_varlen`
 --> src/lib.rs
  |
  | use varlen::define_varlen;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error: pointers cannot be cast to integers during const eval
  --> shouldfail/nonconst_len_expr.rs:17:16
   |
17 |     arr1: [u8; u8_len as *const _ as usize],
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: at compile-time, pointers do not have an integer value
   = note: avoiding this restriction via `transmute`, `union`, or raw pointers leads to compile-time undefined behavior

error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> shouldfail/nonconst_len_expr.rs:20:16
   |
20 |     arr2: [u8; next_rand()],
   |                ^^^^^^^^^^^
